[package]
name = "scalefs-windowspnp"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/scalefs/scalefs-windowspnp-lib-rs"

[dependencies]
libc = "0.2.151"
scalefs-common = { path = "../scalefs-common-lib-rs" }
scalefs-primitives = { path = "../scalefs-primitives-lib-rs" }
scalefs-uuid = { path = "../scalefs-uuid-lib-rs" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell_PropertiesSystem",
]